# MapDegrader

./: .clang-format  .gitignore  .gitmodules  .travis.yml  MapDegrader.sln  README.md  appveyor.yml  build_linux.sh
.github/: dependabot.yml
.github/workflows/: clang-format-check.yml  windows_build_test_and_push.yml
MapDegrader/: CMakeLists.txt  MapDegrader.vcxproj  MapDegrader.vcxproj.filters
MapDegrader/Source/: MapDegrader.cpp  MapDegrader.h  main.cpp
MapDegrader/Source/Mappers/ColorMapper/: ColorMapper.cpp  ColorMapper.h
MapDegrader/Source/Mappers/DefinitionsScraper/: Definitions.cpp  Definitions.h
MapDegrader/Source/Mappers/LandedTitlesScraper/: LandedTitles.cpp  LandedTitles.h
MapDegrader/Source/Mappers/LocalizationScraper/: LocalizationScraper.cpp  LocalizationScraper.h
MapDegraderTests/: MapDegraderTests.vcxproj  MapDegraderTests.vcxproj.filters
MapDegraderTests/MapperTests/: ColorMapTests.cpp  DefinitionsTests.cpp  LandedTitlesTests.cpp  LocalizationTests.cpp
